--- a/index.html
+++ b/index.html
@@ -367,6 +367,14 @@
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
                                 placeholder="Tidak ada. / Ada, sertifikat Public Speaking."></textarea>
                         </div>
+                        <div>
+                            <label for="sertifikat_umum" class="block text-sm font-medium text-gray-700 mb-1">Apakah
+                                kamu pernah mengikuti Pelatihan/Workshop? Jika ada,
+                                sebutkan Lokasi dan Nama Pelatihan/Workshop nya.</label>
+                            <textarea id="sertifikat_umum" name="sertifikat_umum" rows="3"
+                                class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
+                                placeholder="Tidak ada. / Ada, Superteam Bootcamp Yogyakarta."></textarea>
+                        </div>
 
                         <!-- SECTIONS DINAMIS BERDASARKAN POSISI -->
 
@@ -913,3 +921,4 @@
 </body>
 
 </html>
+
