--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                                 <option value="Sales">Sales</option>
                                 <option value="Back Office (Office Boy)">Back Office (Office Boy)</option>
                                 <option value="IT Support">IT Support</option>
+                                <option value="Team Leader">Team Leader</option>
                             </select>
                         </div>
                         <div>
@@ -366,14 +367,6 @@
                             <textarea id="sertifikat_umum" name="sertifikat_umum" rows="3"
                                 class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
                                 placeholder="Tidak ada. / Ada, sertifikat Public Speaking."></textarea>
-                        </div>
-                        <div>
-                            <label for="workshop" class="block text-sm font-medium text-gray-700 mb-1">Apakah
-                                kamu pernah mengikuti Pelatihan/Workshop? Jika ada,
-                                sebutkan Lokasi dan Nama Pelatihan/Workshop nya.</label>
-                            <textarea id="workshop" name="workshop" rows="3"
-                                class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
-                                placeholder="Tidak ada. / Ada, Superteam Bootcamp Yogyakarta."></textarea>
                         </div>
 
                         <!-- SECTIONS DINAMIS BERDASARKAN POSISI -->
@@ -632,6 +625,59 @@
                                 <input type="text" id="pengalaman_monitoring_tools" name="pengalaman_monitoring_tools"
                                     class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
                                     placeholder="Pernah, menggunakan Zabbix. / Belum pernah.">
+                            </div>
+                        </div>
+                        
+                        <!--TEAM LEADER-->
+                        <div id="section-teamleader" class="posisi-section space-y-6" style="display: none;">
+                            <h3 class="font-semibold text-lg text-gray-800">Khusus Team Leader</h3>
+                            <div>
+                                <label for="pengalaman_sales_team" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Apakah kamu pernah menjadi team sales? Jika Ya, Apa produk nya?
+                                </label>
+                                <input type="text" id="pengalaman_sales_team" name="pengalaman_sales_team"
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
+                                    placeholder="Contoh: Ya, saya menjual produk sim card di perusahan. / Tidak pernah.">
+                            </div>
+                            <div>
+                                <label for="pengalaman_team_leader" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Apakah kamu pernah menjadi team leader? Jika Ya, Berapa lama?
+                                </label>
+                                <input type="text" id="pengalaman_team_leader" name="pengalaman_team_leader"
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
+                                    placeholder="Contoh: Ya, 1 tahun di perusahaan sebelumnya.">
+                            </div>
+                            <div>
+                                <label for="jumlah_anggota_team" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Berapa banyak anggota team yang kamu pimpin?
+                                </label>
+                                <input type="number" id="jumlah_anggota_team" name="jumlah_anggota_team"
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
+                                    placeholder="Contoh: 10">
+                            </div>
+                            <div>
+                                <label for="pencapaian_team_leader" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Pencapaian apa yang pernah kamu capai saat menjadi Team Leader?
+                                </label>
+                                <textarea id="pencapaian_team_leader" name="pencapaian_team_leader" rows="3"
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
+                                    placeholder="Contoh: Berhasil menaikkan omzet tim sebesar 20% dalam 3 bulan..."></textarea>
+                            </div>
+                            <div>
+                                <label for="pengalaman_crm_wa" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Apakah kamu pernah menajadi sales/leader untuk produk retail? (Contoh: Skincare, ATK,Kaos, Rokok, dan lain lain)
+                                </label>
+                                <input type="text" id="pengalaman_crm_wa" name="pengalaman_crm_wa"
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
+                                    placeholder="Contoh: Ya, saya pernah menjadi sales/leader menjual produk Skincare A">
+                            </div>
+                            <div>
+                                <label for="pengalaman_crm_wa" class="block text-sm font-medium text-gray-700 mb-1">
+                                    Apakah kamu pernah menggunakan Aplikasi CRM atau Whatsapp Blast?
+                                </label>
+                                <input type="text" id="pengalaman_crm_wa" name="pengalaman_crm_wa"
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-lg input-focus-ring"
+                                    placeholder="Contoh: Ya, terbiasa menggunakan Salesforce dan Watzap.">
                             </div>
                         </div>
 
@@ -921,5 +967,3 @@
 </body>
 
 </html>
-
-
